change css and html

--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
 </head>
 <body>
     
-    <!-- Navbar -->
-    <div class="navbar-kopium">
-        <img src="photo/LOGO.png" alt="">
-        <div class="nav">
-            <a href="">HOME</a>
-            <a href="">ABOUT</a>
-            <a href="">MENU</a>
-            <a href="">LOCATION</a>
-            <a href="">NEWS</a>
-            <a href="">CONTACT</a>
+    <div class="background">   
+        <!-- Navbar -->
+        <div class="navbar-kopium">
+            <img src="photo/LOGO.png" alt="">
+            <div class="nav">
+                <a class="nav-link" href="">HOME</a>
+                <a class="nav-link" href="">ABOUT</a>
+                <a class="nav-link" href="">MENU</a>
+                <a class="nav-link" href="">LOCATION</a>
+                <a class="nav-link" href="">NEWS</a>
+                <a class="nav-link" href="">CONTACT</a>
+            </div>
         </div>
-    </div>
-
-    <!-- Home -->
-    <div class="home-kopium">
-        <div class="home">
-            <h2>KOPIUM</h2>
-            <h3>COFFEEHOUSE & RESTAURANT AT THE TRAILHEAD</h3>
+    
+        <!-- Home -->
+        <div class="home-kopium">
+            <div class="home">
+                <h2>KOPIUM</h2>
+                <h3>COFFEEHOUSE & RESTAURANT AT THE TRAILHEAD</h3>
+            </div>
+            <div class="btn">
+                <h1>Visit us</h1>
+            </div>
         </div>
-        <button>Visit Us</button>
     </div>
 
     <!-- story -->
