--- a/index.html
+++ b/index.html
@@ -38,19 +38,28 @@
     </div>
 
     <!-- story -->
-    <div class="story-kopium1">
-        <div class="story1">
-            <h2>“ Kopium lahir dari hasrat menghadirkan kopi yang bukan sekadar minuman, tapi pengalaman penuh rasa dan cerita.”</h2>
-        </div>
-        <img src="photo/Group 3.png" alt="">
-    </div>
+    <section class="story">
+        <div class="story-container">
+            <div class="content-left">
+                
+                <div class="quote1">
+                    <p>"Kopium lahir dari hasrat menghadirkan kopi yang bukan sekadar minuman, tapi pengalaman penuh rasa dan cerita."</p>
+                </div>
 
-    <div class="story-kopium2">
-        <img src="photo/Group 2 (1).png" alt="">
-        <div class="story2">
-            <h2>“Kami percaya, setiap cangkir kopi punya cerita dan setiap cerita dimulai dari kehangatan.”</h2>
+                <img src="photo/Group 2 (1).png" alt="foto">
+            </div>
+
+            
+            <div class="content-right">
+                <img src="photo/Group 3.png" alt="foto">
+
+                <div class="quote2">
+                    <p>“Kami percaya, setiap cangkir kopi punya cerita dan setiap cerita dimulai dari kehangatan.”</p>
+                </div>
+            </div>
+
         </div>
-    </div>
+    </section>
 
     <!-- tentang kami -->
     <div class="tentang-kopium">
