Mengedit css dan html

--- a/index.html
+++ b/index.html
@@ -65,10 +65,20 @@
     <div class="tentang-kopium">
         <div class="tentang">
             <h2>TENTANG KAMI</h2>
-            <h3>Di tengah hiruk pikuk kehidupan kota, ada satu keresahan sederhana kita jarang benar-benar berhenti. Semuanya serba cepat kerja, kuliah, deadline, sampai akhirnya kita lupa menikmati momen kecil yang menenangkan. Dari keresahan itulah Kopium lahir. Bukan sekadar kafe, tapi ruang untuk bernapas sebentar di antara rutinitas. Tempat di mana aroma kopi bukan cuma penggugah rasa, tapi juga pengingat bahwa hidup tak harus selalu terburu-buru.</h3>
+            <p>Di tengah hiruk pikuk kehidupan kota, ada satu keresahan sederhana kita jarang benar-benar berhenti. Semuanya serba cepat kerja, kuliah, deadline, sampai akhirnya kita lupa menikmati momen kecil yang menenangkan. Dari keresahan itulah Kopium lahir. Bukan sekadar kafe, tapi ruang untuk bernapas sebentar di antara rutinitas. Tempat di mana aroma kopi bukan cuma penggugah rasa, tapi juga pengingat bahwa hidup tak harus selalu terburu-buru.</p>
             <button>Selengkapnya</button>
         </div>
-        <video src=""></video>
+        <div class="videow">
+
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/zTdJNWODyas?si=528VZRktYbvBGe1H" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+        </div>
     </div>
 
     <!-- testimoni -->
