Co-authored-by: Fatihnih<bociltoyaa@gmail.com>

--- a/index.html
+++ b/index.html
@@ -88,20 +88,19 @@
     </div>
 
         <div class="test">
-
             <div class="testimoni1">
                 <img src="photo/windah senyum Roblox 1.png" alt="">
-                <h2>windah batubara</h2>
+                <h2>Windah Batubara</h2>
                 <h3>streamer/Youtuber</h3>
-                <img src="photo/right 3.png" alt="">
+                <img src="photo/right 3.png" alt="" class="kutip">
                 <p>Tempatnya chill banget sih kayak aesthetic gitu. Gw bisa nongkrong sambil ngegame tanpa stress.</p>
             </div>
             
             <div class="testimoni2">
             <img src="photo/windah senyum Roblox 2.png" alt="">
-            <h2>Ishowmeat</h2>
+            <h2>IshowMeat</h2>
             <h3>Streamer</h3>
-            <img src="photo/right 3.png" alt="">
+            <img src="photo/right 3.png" alt="" class="kutip">
             <p>Yoo this place is crazy damn bro! The coffee hits hard, the vibe is chill, Kopium mantap!</p>
         </div>
         
@@ -109,7 +108,7 @@
             <img src="photo/windah senyum Roblox 3.png" alt="">
             <h2>JOKOGET</h2>
             <h3>Tokoh Masyarakat</h3>
-            <img src="photo/right 3.png" alt="">
+            <img src="photo/right 3.png" alt="" class="kutip">
             <p>Tempatnya nyaman, cocok untuk berdiskusi atau sekadar menikmati waktu. Kopium patut jadi kebanggaan lokal.</p>
         </div>
     </div>
