--- a/PAGES/home.html
+++ b/PAGES/home.html
@@ -15,6 +15,18 @@
         <div class="coffee-cup">☕</div>
         <h2>Seduh Kopi...</h2>
     </div>
+
+    <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+    </div>
+
+    <div class="news-ticker">
+        <div class="ticker-wrap">
+            <div class="ticker-item">
+                🔥 PROMO HARI INI: Beli 1 Kopi Gratis Curhat! | 🎮 Diskon 10% buat yang Push Rank di Cafe | ☕ Menu Baru: Kopi Gula Aren Varian Rasa Bayar Cicilan.
+            </div>
+        </div>
+    </div>
     
     <div class="background">   
         <!-- Navbar -->
@@ -79,6 +91,8 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/Fqh76ifUAC4?si=7nbm68IzT1oZ7hcu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#F0BB79" fill-opacity="1" d="M0,224L26.7,192C53.3,160,107,96,160,90.7C213.3,85,267,139,320,144C373.3,149,427,107,480,101.3C533.3,96,587,128,640,154.7C693.3,181,747,203,800,186.7C853.3,171,907,117,960,96C1013.3,75,1067,85,1120,128C1173.3,171,1227,245,1280,234.7C1333.3,224,1387,128,1413,80L1440,32L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
 
     <!-- testimoni -->
     <div class="border-testi" id="testi">
@@ -241,6 +255,10 @@
           <li><a href="#">Seasonal Festivals</a></li>
         </ul>
       </div>
+
+      <a href="#" class="to-top">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/up--v1.png" alt="Up">
+    </a>
 
       <div class="footer-column logo-column">
         <img src="../Assets/photo/Gemini_Generated_Image_4otxuo4otxuo4otx-removebg-preview.png" alt="">
